Fix menu out of place

--- a/app/assets/stylesheets/admin/shared/field_search_popup.sass
+++ b/app/assets/stylesheets/admin/shared/field_search_popup.sass
@@ -5,6 +5,7 @@
   background: white
   border-radius: 3px
   border: 1px solid #eee
+  z-index: 5000
 
   ul
     padding: 0
