--- a/app/assets/stylesheets/admin/style.sass
+++ b/app/assets/stylesheets/admin/style.sass
@@ -243,6 +243,11 @@ a:hover
   width: 230px
   height: 120px
 
+.popup
+  z-index: 5000
+  box-shadow: 0 3px 4px gray
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2)
+
 .index_header
   display: table
   width: 100%
